<resources>
    <string name="app_name">Audio Recorder</string>
    <string name="records">Records</string>
    <string name="settings">Settings</string>
    <string name="setup">Setup</string>
    <string name="welcome_1">Welcome to the simple and fast application</string>
    <string name="welcome_2">Beautiful design and good functionality</string>
    <string name="welcome_3">Select best settings and start recording</string>
    <string name="title_1">Audio Recorder</string>
    <string name="title_2">Audio Recorder</string>
    <string name="title_3">Recordio Audier</string>
    <string name="rate_app">Rate app</string>
    <string name="store_records_public">Store records in a public dir</string>
    <string name="record_in_stereo">Record in Stereo</string>
    <string name="keep_screen_on">Keep screen ON while recording</string>
    <string name="total_duration">Total recorded duration: %s</string>
    <string name="total_record_count">Total records count: %d</string>
    <string name="available_space">Available space: %s</string>
    <string name="delete_all">Delete all records</string>
    <string name="delete_all2">Delete all</string>
    <string name="records_was_removed">Some records files was not found in the records directory. Possibly they was removed or moved.</string>
    <string name="warning">Warning!</string>
    <string name="delete_this_record">Delete this record?</string>
    <string name="delete_record">Move to trash %s?</string>
    <string name="delete_record_forever">Delete record %s forever?</string>
    <plurals name="delete_selected_records">
        <item quantity="one">Move to trash %d selected record?</item>
        <item quantity="other">Move to trash %d selected records?</item>
    </plurals>
    <plurals name="download_selected_records">
        <item quantity="one">Copy %d selected record to the Download folder?</item>
        <item quantity="other">Copy %d selected records to the Download folder?</item>
    </plurals>
    <string name="restore_record">Restore record %s?</string>
    <string name="delete_all_records">Delete all records?</string>
    <string name="all_records_deleted">All records deleted successfully</string>
    <string name="failed_to_delete_all_records">Failed to delete all records</string>
    <string name="please_select_record_to_share">Please select a record to share</string>
    <string name="record_name">New name</string>
    <string name="recording">Recording: %s</string>
    <string name="recording_is_on">Recording is ON</string>
    <string name="recording_progress">Recording&#8230;</string>
    <string name="recording_paused">Paused</string>
    <string name="playback">Playback: %s</string>
    <string name="zero_time">00:00</string>
    <string name="empty">Empty</string>
    <string name="selected"> %d selected</string>
    <string name="no_records">Records is empty</string>
    <string name="no_bookmarks">Bookmarks is empty</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="share_record">Share record: %s</string>
    <plurals name="share_records_count">
        <item quantity="one">Share %d record</item>
        <item quantity="other">Share %d records</item>
    </plurals>
    <string name="import_progress">Audio file import&#8230;</string>
    <string name="btn_import">Import</string>
    <string name="processing_canceled">Processing is canceled</string>
    <string name="record_calculation">Waveform calculations&#8230;</string>
    <string name="record_processing">Waveform drawing calculations&#8230;</string>
    <string name="request">Request or feedback</string>
    <string name="email_clients_not_found">Not found any Email client</string>
    <string name="send_email">Send by email&#8230;</string>
    <string name="open_record_with">Open %s with</string>
    <string name="delete">Delete</string>
    <string name="restore">Restore</string>
    <string name="info">Information</string>
    <string name="rename">Rename</string>
    <string name="dont_ask_again">Don\'t ask again</string>
    <string name="open_with">Open with&#823;</string>
    <string name="download">Download</string>
    <string name="downloading">Downloading: %s</string>
    <plurals name="downloading_success_count">
        <item quantity="one">%d record downloaded successfully</item>
        <item quantity="other">%d records downloaded successfully</item>
    </plurals>
    <string name="downloading_success_and_fail_count">%d records downloaded successfully and %d failed to download</string>
    <string name="downloading_success">%s downloaded to the Download directory</string>
    <plurals name="downloading_failed_count">
        <item quantity="one">Failed to download %d record</item>
        <item quantity="other">Failed to download %d records</item>
    </plurals>
    <string name="downloading_failed">Failed to download: %s</string>
    <string name="downloading_failed_file_already_exists">Failed to download. File with name %s already exists</string>
    <string name="downloading_cancel">Downloading canceled</string>
    <string name="share">Share</string>
    <string name="ask_to_rename">Show rename dialog after recording is completed</string>
    <string name="record_moved_into_trash">The record moved to trash</string>
    <string name="selected_records_moved_into_trash">Selected records moved to trash</string>
    <string name="all_records_deleted_successfully">All records deleted successfully</string>
    <string name="record_deleted_successfully">The record deleted successfully</string>
    <string name="record_restored_successfully">The record restored successfully</string>
    <string name="record_imported_successfully">The record imported successfully</string>
    <string name="cant_import_files">Can\'t import files</string>
    <string name="by_date">By date (newest)</string>
    <string name="by_date_desc">By date (oldest)</string>
    <string name="by_name">By name (A-Z)</string>
    <string name="by_name_desc">By name (Z-A)</string>
    <string name="by_duration">By duration (longest)</string>
    <string name="by_duration_desc">By duration (shortest)</string>
    <string name="need_write_permission">The app requires permission to access to the public storage. If not allowed, records will be stored in the app’s private directory</string>
    <string name="rec_name">Name:</string>
    <string name="rec_format">Format:</string>
    <string name="rec_duration">Duration:</string>
    <string name="rec_frequency">Frequency:</string>
    <string name="rec_size">Size:</string>
    <string name="rec_created">Created:</string>
    <string name="rec_location">File location:</string>
    <string name="naming">Naming:</string>
    <string name="private_dir_warning">Records will be stored in the app\'s private directory which is not visible for other apps</string>
    <string name="public_dir_warning">Records will be stored in a common directory on your device which is visible for other apps</string>
    <string name="lost_records">Lost records</string>
    <string name="trash">Trash</string>
    <string name="trash_info">The records moved to the trash will be automatically removed forever in 60 days.</string>
    <string name="file_browser">File browser</string>
    <string name="private_dir">Private directory</string>
    <string name="public_dir">Public directory</string>
    <string name="found_in_the_app">Found in the app</string>
    <string name="not_found_in_the_app">Not found in the app</string>
    <string name="in_trash">In the trash</string>
    <string name="app_settings">App settings:</string>
    <string name="recording_settings">Recording settings:</string>
    <string name="other_settings">Other:</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="btn_save">Save</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_yes">Yes</string>
    <string name="btn_ok">Ok</string>
    <string name="btn_no">No</string>
    <string name="btn_play">Play</string>
    <string name="btn_deny">Deny</string>
    <string name="btn_allow">Allow</string>
    <string name="btn_details">Details</string>
    <string name="btn_get_started">Get started</string>
    <string name="btn_apply">Apply</string>
    <string name="btn_reset">Reset</string>
    <string name="btn_next">Next</string>
    <string name="info_format"><b>M4a</b> format is encoded with AAC audio codec has good quality and small size. <b>(recommended)</b>
		\n<b>Wav</b> is uncompressed audio data format. It takes much more space than other formats. It\'s needed for specific cases.
		\n<b>3gp</b> is a multimedia container format developed for mobile telecommunication services. Use it if you need to save space.
		</string>
    <string name="info_frequency"><b>Sample rate</b> is the number of samples of audio carried per second.
		\n<b>48kHz</b> is the sample rate used for DVDs.
		\n<b>44,1kHz</b> is the sampling rate of Audio CDs. <b>(recommended)</b>
		\n<b>22kHz</b> popular sample rate for low bit rate such as 64 kbps.
		\n <b>8kHz</b> sample rate has less bandwidth than modern telephone systems. Not suitable for any serious recording task.
		</string>
    <string name="info_bitrate"><b>Bitrate</b> is size of data per second of sound. Directly affects recording quality and size.
		\n<b>256 kbps</b> good quality bitrate.
		\n<b>192 kbps</b> medium quality bitrate.
		\n<b>128 kbps</b> mid-range bitrate quality. Common bitrate for podcasts. <b>(recommended)</b>
		\n<b>96 kbps</b> generally used for speech or low-quality streaming.
		\n<b>48 kbps</b> generally acceptable only for speech.
		</string>
    <string name="info_channels">
		<b>Stereo</b> two separate channels are recorded. This means that each stereo speaker has a different sound signal. <b>(recommended)</b>
		\n<b>Mono</b> one signal channel is recorded. It can be reproduced through several speakers, but all speakers are still reproducing the same copy of the signal.
		</string>
    <string name="info_3gp"><b>3gp</b> is a multimedia container format developed for mobile telecommunication services. Use it if you need to save space.</string>
    <string name="info_m4a"><b>M4a</b> format is encoded with AAC audio codec has good quality and small size. <b>(recommended)</b></string>
    <string name="info_wav"><b>Wav</b> is uncompressed audio data format. It takes much more space than other formats. It\'s needed for specific cases.</string>
    <string name="stringbtnstartreciting">Start Recitation</string>
    <string name="stringbtnsettings">Settings</string>
    <string name="stringbtnabout">About</string>
    <string name="stringbtnexit">Exit</string>
    <string name="stringhelp">Help</string>
    <string name="ikhlaas1">"قُلۡ هُوَ ٱللَّهُ أَحَدٌ ١ "</string>
    <string name="ikhlaas2">"ٱللَّهُ ٱلصَّمَدُ ٢ "</string>
    <string name="ikhlaas3">"لَمۡ\tيَلِدۡ\tوَلَمۡ\tيُولَدۡ ٣ "</string>
    <string name="ikhlaas4">وَلَمۡ يَكُن لَّهُۥ كُفُوًا أَحَدُۢ ٤</string>
    <string name="ikhlaas">سُورَةُ الإِخۡلَاصِ</string>
    <string name="bismillah">بِسۡمِ ٱللَّهِ ٱلرَّحۡمَٰنِ ٱلرَّحِيمِ</string>
    <string name="authen">User Authentication</string>
    <string name="signup">Signup</string>
    <string name="username">User Name :</string>
    <string name="password2">Password :</string>
    <string name="emailidno">Email Address :</string>
    <string name="enterloginname">Enter User Name</string>
    <string name="enteremail">Enter Email Address</string>
    <string name="clear">Clear</string>
    <string name="enterpassword">Enter Password</string>
    <string name="login">Login</string>
    <string name="createaccount">Create new Account</string>
    <string name="logoutbtnstring">Log Out</string>
    <string name="viewlistoflistmistakes">View List of Mistakes</string>
</resources>