<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".app.main.FAQActivity"
    tools:ignore="ExtraText">

    <TextView
        android:id="@+id/createaccounttitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="57dp"
        android:layout_marginBottom="20dp"
        android:text="@string/authen"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintBottom_toTopOf="@+id/loginuserlbl"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/loginuserlbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="250dp"
        android:layout_marginBottom="5dp"
        android:text="@string/username"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/loginusernamestxt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createaccounttitle" />

    <TextView
        android:id="@+id/loginpasswordlbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="260dp"
        android:layout_marginEnd="250dp"
        android:layout_marginBottom="5dp"
        android:text="@string/password2"
        android:textSize="18sp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginusernamestxt" />

    <Button
        android:id="@+id/loginbtn"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="380dp"
        android:layout_height="63dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="400dp"
        android:layout_marginEnd="15dp"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/loginclearbtn"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="380dp"
        android:layout_height="63dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="470dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="5dp"
        android:text="@string/clear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/creataccountbtn"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="380dp"
        android:layout_height="63dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="540dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="5dp"
        android:text="@string/createaccount"
        app:layout_constraintBottom_toTopOf="@+id/loginexitbtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <Button
        android:id="@+id/loginexitbtn"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="380dp"
        android:layout_height="63dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="610dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="28dp"
        android:text="@string/stringbtnexit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/loginpasswordtxt"
        android:layout_width="285dp"
        android:layout_height="84dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="280dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="30dp"
        android:accessibilityHeading="false"
        android:ems="10"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:hint="@string/enterpassword"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/loginclearbtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/loginusernamestxt"
        android:layout_width="287dp"
        android:layout_height="48dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="5dp"
        android:ems="10"
        android:focusable="true"
        android:focusableInTouchMode="true"

        android:hint="@string/enterloginname"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginuserlbl" />

</RelativeLayout>